# movie_seeker

./: .gitignore  README.md  api.py  app.py  main.py  pyproject.toml  render.yaml  requirements.txt  test.ipynb  tools.py
static/: index.html
utils/: add_cord.py  data.py  data_with_coords.py  utils.py
