[project]
name = "movie-seeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
